# cmd/api/docs/swagger.json
@@ -1415,8 +1415,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "re-password",
-                        "name": "re-password",
+                        "description": "repassword",
+                        "name": "repassword",
                         "in": "formData",
                         "required": true
                     },
